--- a/bloks/profile/__info-title/profile__info-title.css
+++ b/bloks/profile/__info-title/profile__info-title.css
@@ -3,6 +3,10 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 115%;
+  color: #ffffff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 @media screen and (max-width: 1023px) {
   .profile__info-title {
