--- a/pages/index.css
+++ b/pages/index.css
@@ -1,37 +1,37 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts/fonts.css);
-@import url(../bloks/body/body.css);
-@import url(../bloks/page/page.css);
-@import url(../bloks/page/_indent/page_indent.css);
-@import url(../bloks/header/header.css);
-@import url(../bloks/header/_indent/header_indent.css);
-@import url(../bloks/header/__logo/header__logo.css);
-@import url(../bloks/content/content.css);
-@import url(../bloks/content/_indent/content_indent.css);
-@import url(../bloks/profile/profile.css);
-@import url(../bloks/profile/_indent/profile_indent.css);
-@import url(../bloks/profile/__avatar/profile__avatar.css);
-@import url(../bloks/profile/__info/profile__info.css);
-@import url(../bloks/profile/__info-title/profile__info-title.css);
-@import url(../bloks/profile/__info-subtitle/profile__info-subtitle.css);
-@import url(../bloks/profile/__edit/profile__edit.css);
-@import url(../bloks/profile/__add/profile__add.css);
-@import url(../bloks/group-cards/group-cards.css);
-@import url(../bloks/group-cards/_indent/group-cards_indent.css);
-@import url(../bloks/card/card.css);
-@import url(../bloks/card/__img/card__img.css);
-@import url(../bloks/card/__caption/card__caption.css);
-@import url(../bloks/card/__text/card__text.css);
-@import url(../bloks/card/__like/card__like.css);
-@import url(../bloks/footer/footer.css);
-@import url(../bloks/footer/_indent/footer_indent.css);
-@import url(../bloks/footer/__copyright/footer__copyright.css);
-@import url(../bloks/popup/popup.css);
-@import url(../bloks/popup/__close/popup__close.css);
-@import url(../bloks/popup/_opened/popup_opened.css);
-@import url(../bloks/popup/__container/popup__container.css);
-@import url(../bloks/popup/__title/popup__title.css);
-@import url(../bloks/popup/__contact/popup__contact.css);
-@import url(../bloks/popup/__input/popup__input.css);
-@import url(../bloks/popup/__paragraf/_text/popup__paragraf_text_style.css);
-@import url(../bloks/popup/__save/popup__save.css);
+@import url(../vendor/fonts/fonts.css);
+@import url(../blocks/body/body.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/indent/indent.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/indent/__header/indent__header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/indent/__content/indent__content.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/_indent/profile_indent.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__info-title/profile__info-title.css);
+@import url(../blocks/profile/__info-subtitle/profile__info-subtitle.css);
+@import url(../blocks/button/_type/button_type_edit-profil.css);
+@import url(../blocks/button/_type/button_type_add-profile.css);
+@import url(../blocks/group-cards/group-cards.css);
+@import url(../blocks/group-cards/_indent/group-cards_indent.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__img/card__img.css);
+@import url(../blocks/card/__caption/card__caption.css);
+@import url(../blocks/card/__text/card__text.css);
+@import url(../blocks/button/_type/button_type_like-card.css);
+@import url(../blocks/button/_type/button_type_like-active.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/indent/__footer/indent__footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/button/_type/button_type_close-popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__contact/popup__contact.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/button/_type/button_type_save-popup.css);
