--- a/blocks/button/_type/button_type_save-popup.css
+++ b/blocks/button/_type/button_type_save-popup.css
@@ -2,7 +2,7 @@
   background: #000000;
   border-radius: 2px;
   border: none;
-  font-family: 'Inter', Arial, sans-serif;;
+  font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 122%;
