--- a/blocks/button/_active/button_active-like.css
+++ b/blocks/button/_active/button_active-like.css
@@ -1,4 +1,4 @@
-.button_type_like-active:active {
+.button_active-like {
   background-image: url(../../../images/like-black.svg);
   opacity: 1;
 }
