--- a/blocks/indent/__group-cards/indent__group-cards.css
+++ b/blocks/indent/__group-cards/indent__group-cards.css
@@ -1,13 +1,13 @@
-.group-cards_indent {
+.indent__group-cards {
   margin-bottom: 66px;
 }
 @media screen and (max-width: 1279px) {
-  .group-cards_indent {
+  .indent__group-cards {
     margin-bottom: 64px;
   }
 }
 @media screen and (max-width: 463px) {
-  .group-cards_indent {
+  .indent__group-cards {
     margin-bottom: 50px;
   }
 }
