--- a/blocks/indent/__profile/indent__profile.css
+++ b/blocks/indent/__profile/indent__profile.css
@@ -1,18 +1,18 @@
-.profile_indent {
+.indent__profile {
   margin-bottom: 51px;
 }
 @media screen and (max-width: 1023px) {
-  .profile_indent {
+  .indent__profile {
     margin-bottom: 50px;
   }
 }
 @media screen and (max-width: 767px) {
-  .profile_indent {
+  .indent__profile {
     margin-bottom: 42px;
   }
 }
 @media screen and (max-width: 424px) {
-  .profile_indent {
+  .indent__profile {
     margin-bottom: 36px;
   }
 }
