--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,7 @@
 @import url(../blocks/indent/__footer/indent__footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_style/popup_style_light.css);
 @import url(../blocks/button/_type/button_type_close-popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
@@ -37,3 +38,7 @@
 @import url(../blocks/popup/__contact/popup__contact.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/button/_type/button_type_save-popup.css);
+@import url(../blocks/popup/_style/popup_style_dark.css);
+@import url(../blocks/popup/__opened_foto/popup__opened-foto.css);
+@import url(../blocks/popup/__foto/popup__foto.css);
+@import url(../blocks/popup/__foto-caption/popup__foto-caption.css);
