--- a/blocks/popup/__image-caption/popup__image-caption.css
+++ b/blocks/popup/__image-caption/popup__image-caption.css
@@ -1,4 +1,4 @@
-.popup__foto-caption {
+.popup__image-caption {
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
   font-size: 12px;
