--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,11 +4,14 @@
   height: 100%;
   top: 0;
   left: 0;
-  display: none;
+  display: grid;
   grid-template-columns: repeat(2, auto);
   align-content: center;
   justify-content: center;
   gap: 8px;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s ease-in-out;
 }
 @media screen and (max-width: 424px) {
   .popup {
