--- a/blocks/button/_style/button_style_close.css
+++ b/blocks/button/_style/button_style_close.css
@@ -1,4 +1,4 @@
-.button__close {
+.button_style_close {
   background-image: url(../../../images/CloseIcon.svg);
   min-width: 32px;
   min-height: 32px;
@@ -6,11 +6,11 @@
   border: none;
   grid-column: 2;
 }
-.button__close:hover {
+.button_style_close:hover {
   opacity: 0.6;
 }
 @media screen and (max-width: 424px) {
-  .button__close {
+  .button_style_close {
     grid-column: 1;
     min-width: 20px;
     min-height: 20px;
