--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 121%;
-  margin: 0 0 30px 0;
+  margin: 30px 0 0 0;
   min-width: 100%;
   outline: none;
   padding: 0 0 8px 0;
@@ -13,8 +13,8 @@
   border-right: none;
   -webkit-box-shadow: 0 0 0px 1000px #ffffff inset;
 }
-.popup__input:last-of-type {
-  margin-bottom: 0;
+.popup__input:first-of-type {
+  margin-top: 0;
 }
 .popup__input:focus {
   background-color: #f2f2f2;
