--- a/pages/index.css
+++ b/pages/index.css
@@ -35,10 +35,15 @@
 @import url(../blocks/popup/_theme/popup_theme_dark.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__field-name/popup__field-name.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__contact/popup__contact.css);
 @import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/span/__error/span__error.css);
+@import url(../blocks/span/__error/_active/span__error_active.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/button/_style/button_style_save.css);
+@import url(../blocks/button/_style/button_style_save-invalid.css);
 @import url(../blocks/popup/__image-container/popup__image-container.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__image-caption/popup__image-caption.css);
