--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -4,7 +4,8 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 121%;
-  margin: 30px 0 0 0;
+  /*margin: 30px 0 0 0;*/
+  margin: 0;
   min-width: 100%;
   outline: none;
   padding: 0 0 8px 0;
