--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,13 +4,14 @@
   font-size: 24px;
   line-height: 120%;
   margin: 0 0 46px;
-  max-width: 100%;
+  min-width: calc(430px - 72px);
 }
 @media screen and (max-width: 424px) {
   .popup__title {
     font-size: 18px;
     line-height: 133%;
     margin-bottom: 73px;
+    min-width: (282px - 44px);
   }
 }
 .form {
