--- a/pages/index.css
+++ b/pages/index.css
@@ -40,6 +40,7 @@
 @import url(../blocks/popup/__contact/popup__contact.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/span/span.css);
+@import url(../blocks/indent/__span/indent__span.css);
 @import url(../blocks/span//_active/span_active.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 @import url(../blocks/button/_style/button_style_save.css);
