--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,10 +2,17 @@
   max-width: 120px;
   border-radius: 50%;
   margin-right: 30px;
+  z-index: 0;
 }
 @media screen and (max-width: 767px) {
   .profile__avatar {
     margin-bottom: 26px;
     margin-right: 0;
   }
+}
+
+.profile__avatar:hover {
+  z-index: -1;
+  opacity: 0.2;
+  transition: opacity 0.35s ease-in-out;
 }
