--- a/src/blocks/card/__img/card__img.css
+++ b/src/blocks/card/__img/card__img.css
@@ -1,10 +1,8 @@
 .card__img {
-  max-width: 100%;
-  min-height: 282px;
   border-radius: 10px 10px 0 0;
-  margin-bottom: 10px;
-  object-fit: fill;
-  object-position: center;
   cursor: pointer;
+  min-width: 100%;
+  height: 282px;
+  margin-bottom: 20px;
 }
 
