--- a/src/blocks/group-cards/group-cards.css
+++ b/src/blocks/group-cards/group-cards.css
@@ -2,6 +2,7 @@
   max-width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(282px, 1fr));
+  grid-template-rows: auto 361px;
   gap: 20px 17px;
 }
 @media screen and (max-width: 767px) {
