--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,10 @@
 .profile__avatar {
-  max-width: 120px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
   margin-right: 30px;
   z-index: 0;
+  object-fit: fill;
 }
 @media screen and (max-width: 767px) {
   .profile__avatar {
